- FTS: Durchbruch beim Parameter Editor, jetzt wird es dann :-) - knxcomm: mehr Arbeit am KNXnet/IP
git-svn-id: file:///usr/local/svn/freebus/trunk@1830 219b8a4f-0e80-dc11-b224-0019d16aef49